   - rewrote the mp3 duration detection code to be more robust
     by making it vastly easier. In the process the bitzi 
     related code has been tossed. This should make the libary
     smaller and the mp3 duration checking faster.
   - Due to the bitzi code being removed, the SHA1 and Bitprint
     related functions have been removed.

Changes for libmusicbrainz 2.0.2
-------------------------------------

   - Added support for Mac OS X
   - Improved build system
   - Added build files for Visual Studio .NET (VC7)

Changes for libmusicbrainz 2.0.1
-------------------------------------
   - Added patch for pkgconfig
   - Threading handled correctly in python wrapper
   - New perl bindings
   - Had client use HTTP 1.0 rather than HTTP 1.1
   

Changes for libmusicbrainz 2.0.0
-------------------------------------

   - Removed some spurious C++ comments from mb_c.h
   - Fixes and improvements to the python language bindings and tools
   - Updated NetBSD cdrom reading code

Changes for libmusicbrainz 2.0.0-pre4
-------------------------------------

   - Two new functions have been added:
       mb_GetFragmentFromURL - Retrieve a fragment from a URI
       mb_GetOrdinalFromList - Retrieve a list ordinal from a given list -- 
                               this is sometimes needed to determine the 
                               location of an item in a list. (e.g. a track in 
                               an album in order to find the track number)
   - The TRM code has been updated for TRM B#er.
   - New queries have been added to queries.h in order to support the improved
     FileLookupInterface.
   - The client library now uses the mm-2.1 and mq-1.1 namespaces.
   - The client library will now be referred to as libmusicbrainz

Changes from version 1.1.0 to version 2.0.0-pre1
------------------------------------------------

   - Added authentication support
   - Added new queries
   - Added support for submitting client version to the server 